chore: prepare DevPilot for production deployment